--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
     <version>1.0-SNAPSHOT</version>
     <name>MavenApp</name>
     <url>http://maven.apache.org</url>
+    <properties>
+         <maven.compiler.source>11</maven.compiler.source>
+         <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 
 
     <dependencies>
@@ -30,6 +34,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
+                <configuration>
+                	<source>1.7</source>
+                	<target>1.7</target>
+                </configuration>
             </plugin>
 
             <!-- Maven Surefire Plugin for Running Tests -->
